--- a/in-memory-inventory.yml
+++ b/in-memory-inventory.yml
@@ -10,11 +10,11 @@
     - name: Add host
       add_host:
         name: "{{ item.public_v4 }}"
-        group: 
-          - "{{ item.metadata.group }}"
-          - "{{ item.metadata.deployment_name }}"
+        group: "{{ item.metadata.group }}"
+#          - "{{ item.metadata.group }}"
+#          - "{{ item.metadata.deployment_name }}"
       with_items: "{{result.ansible_facts.openstack_servers}}"
-      register: add_host_result
+#      register: add_host_result
 
-    - debug:
-        msg: "{{ add_host_result }}"
+#    - debug:
+#        msg: "{{ add_host_result }}"
