--- a/in-memory-inventory.yml
+++ b/in-memory-inventory.yml
@@ -10,7 +10,7 @@
     - name: Add host
       add_host:
         name: "{{ item.public_v4 }}"
-        groups: "{{ item.metadata.group }}"
+        group: "{{ item.metadata.group }}"
 #          - "{{ item.metadata.group }}"
 #          - "{{ item.metadata.deployment_name }}"
       with_items: "{{result.ansible_facts.openstack_servers}}"
