--- a/in-memory-inventory.yml
+++ b/in-memory-inventory.yml
@@ -11,10 +11,25 @@
       add_host:
         name: "{{ item.public_v4 }}"
         group: "{{ item.metadata.group }}"
-#          - "{{ item.metadata.group }}"
-#          - "{{ item.metadata.deployment_name }}"
       with_items: "{{result.ansible_facts.openstack_servers}}"
-#      register: add_host_result
 
-#    - debug:
-#        msg: "{{ add_host_result }}"
+    - name: Add host
+      add_host:
+        name: "{{ item.public_v4 }}"
+        group: "{{ item.metadata.deployment_name }}"
+      with_items: "{{result.ansible_facts.openstack_servers}}"
+
+    - debug:
+        msg: "{{ groups }}"
+        
+    - name: test apps
+      hosts: apps
+        - debug: "apps group done"
+
+    - name: test frontends
+      hosts: frontends
+        - debug: "frontends group done"
+
+    - name: test appdbs
+      hosts: appdbs
+        - debug: "appdbs group done"
