--- a/main.yml
+++ b/main.yml
@@ -4,29 +4,41 @@
 
 # Setup front-end load balancer tier
 
-- name: setup load-balancer tier
-  hosts: frontends
-  become: yes
-  roles:
-    - {name: base-config, tags: base-config}
-    - {name: lb-tier, tags: [lbs, haproxy]}
+#- name: setup load-balancer tier
+#  hosts: frontends
+#  become: yes
+#  roles:
+#    - {name: base-config, tags: base-config}
+#    - {name: lb-tier, tags: [lbs, haproxy]}
 
 # Setup application servers tier
 
-- name: setup app tier
-  hosts: apps
-  become: yes
-  gather_facts: false
-  roles:
-    - {name: base-config, tags: base-config}
-    - {name: app-tier, tags: [apps, tomcat]}
+#- name: setup app tier
+#  hosts: apps
+#  become: yes
+#  gather_facts: false
+#  roles:
+#    - {name: base-config, tags: base-config}
+#    - {name: app-tier, tags: [apps, tomcat]}
 
 # Setup database tier
 
-- name: setup database tier
-  become: yes
-  hosts: appdbs
-  roles:
-    - {name: base-config, tags: base-config}
-    - {name: geerlingguy.postgresql, tags: [dbs, postgres]}
+#- name: setup database tier
+#  become: yes
+#  hosts: appdbs
+#  roles:
+#    - {name: base-config, tags: base-config}
+#    - {name: geerlingguy.postgresql, tags: [dbs, postgres]}
 
+- hosts: apps
+  tasks:
+    - command: echo "apps group done"
+
+- hosts: frontendsa
+  tasks:
+    - command: echo "frontends group done"
+
+- hosts: appdbs
+  tasks:
+    - command: echo "appdbs group done"
+...
