--- a/main.yml
+++ b/main.yml
@@ -30,8 +30,10 @@
 #    - {name: base-config, tags: base-config}
 #    - {name: geerlingguy.postgresql, tags: [dbs, postgres]}
 
-- debug:
-  msg: "{{ groups }}"
+- hosts: all
+  tasks:
+    - debug:
+        msg: "{{ groups }}"
 
 - hosts: apps
   tasks:
