--- a/main.yml
+++ b/main.yml
@@ -1,32 +1,6 @@
 ---
-#- name: Import In-memory inventory play
-#  import_playbook: in-memory-inventory.yml
-
-- name: In-Memory inventory playbook
-  hosts: workstation
-  tasks:
-    - name: Fetch Instance Info
-      os_server_facts:
-        cloud: openstack
-      register: result
-
-    - name: Add host
-      add_host:
-        name: "{{ item.public_v4 }}"
-        group: "{{ item.metadata.group }}"
-      with_items: "{{result.ansible_facts.openstack_servers}}"
-
-    - name: Add host
-      add_host:
-        name: "{{ item.public_v4 }}"
-        group: "{{ item.metadata.deployment_name }}"
-      with_items: "{{result.ansible_facts.openstack_servers}}"
-
-
-- name: Debug in memory inventory
-  hosts: all
-  tasks:
-    - debug: var=groups
+- name: Import In-memory inventory play
+  import_playbook: in-memory-inventory.yml
 
 # Setup front-end load balancer tier
 - name: setup load-balancer tier
